# structured-output-creator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: claude.yml  tests.yml
structured_output_creator/: __init__.py  _base_service.py  _cache.py  _claude.py  _models.py  _openai.py  _raising_service.py  _type_compatibility.py  _types.py
structured_output_creator/_claude/: _compatible.py  _service.py
structured_output_creator/_openai/: _compatible.py  _service.py
tests/: test_base_service.py  test_cache.py  test_claude.py  test_init.py  test_models.py  test_openai.py  test_raising_service.py  test_type_compatibility.py  test_type_safety.py  test_types.py
tests/claude/: test_compatible.py  test_service.py
tests/openai/: test_compatible.py  test_service.py
