[project]
name = "structured_output_creator"
version = "0.1.1"
description = "Generates structured output using LLM"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.13.4",
    "typing_extensions>=4.12",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Tesla2000/structured-output-creator"
Issues = "https://github.com/Tesla2000/structured-output-creator/issues"
Coverage = "https://codecov.io/gh/Tesla2000/structured-output-creator"

[project.optional-dependencies]
openai = [
    "openai>=2.44.0",
]
anthropic = [
    "anthropic>=0.115.1",
]
all = [
    "openai>=2.44.0",
    "anthropic>=0.115.1",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "pytest-logger>=1.1.1",
]
dev = [
    {include-group = "test"},
    "mypy",
    "pre-commit"
]
stubs = [
    "mypy>=1.19.1",
]



[tool.coverage.run]
branch = true
source = ["structured_output_creator"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["structured_output_creator"]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "E501", "S101", "S603", "S607", "COM812", "EM102", "TRY003", "TC001", "TC002", "TC003"]

[tool.pytest.ini_options]
markers = [
    "unit: tests that exercise a single component in isolation",
    "integration: tests that verify multiple components work together",
    "e2e: tests that exercise the full pipeline against real external services",
    "smoke: quick sanity check that the basic pipeline runs",
    "manual: tests that require manual interaction or setup",
]
log_cli = false
log_cli_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["^tests/"]

mypy_path = "stubs"
